Fix lỗi Scrollbar

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -13,7 +13,7 @@
         }
 
         .admin-main {
-
+            height: calc(100vh - 40px);
         }
     }
 }
